<resources>
    <string name="app_name">Login App</string>
    <string name="tv_greenflag_access">GreenFlag customers can create an account to access</string>
    <string name="create_an_account">Create an account</string>
    <string name="tv_reason3">Policy information</string>
    <string name="tv_reason2">Request a rescue online</string>
    <string name="tv_reason1">Car health updates</string>
    <string name="et_email">Email address</string>
    <string name="et_create_pw">Create password</string>
    <string name="et_repeat_pw">Repeat password</string>
    <string name="see_criteria_below">See criteria below</string>
    <string name="btn_next">Next</string>
    <string name="tv_pw_explain">Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lowercase letter. You can use special characters.</string>
    <string name="error_email">An account already exists for this email address.</string>
    <string name="error_pw">One of the passwords you entered doesn\'t match</string>
    <string name="et_hint_name">Name</string>
    <string name="et_hint_username">Username</string>
    <string name="et_hint_password">Password</string>
    <string name="btn_text_change_photo">Change Photo</string>
    <string name="btn_text_choose_birth_date">Choose birth date</string>
    <string name="tv_age">Age</string>
    <string name="tv_hint_choose_country">Choose country</string>
    <string name="rb_text_gender">Gender</string>
    <string name="tv_text_gender">Gender</string>
    <string name="rb_text_female">Female</string>
    <string name="rb_text_male">Male</string>
    <string name="rb_text_not_specified">Not specified</string>
    <string name="et_hint_postal_address">Postal Address (Opt)</string>
    <string name="btn_save_user_info">Save</string>
    <string name="spinner_prompt">Choose a country</string>
    <string name="iv_cd_android_pic">Android pic</string>
    <string-array name="spinner_choose_country">
        <item name="spinner_not_specified">Not Specified</item>
        <item name="spinner_item_us">United States</item>
        <item name="spinner_item_ma">Malaysia</item>
        <item name="spinner_item_ia">Indonesia</item>
        <item name="spinner_item_fr">France</item>
        <item name="spinner_item_it">Italy</item>
        <item name="spinner_item_Sg">Singapore</item>
        <item name="spinner_item_nz">New Zealand</item>
        <item name="spinner_item_in">India</item>
    </string-array>

</resources>
