<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfo">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/et_hint_name"
        android:paddingLeft="8dp"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="8dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/et_hint_username"
        android:paddingLeft="8dp"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <Button
        android:id="@+id/btn_change_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_text_change_photo"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/et_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <Button
        android:id="@+id/btn_choose_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_text_choose_birth_date"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_age" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="15"
        android:hint="@string/et_hint_password"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <TextView
        android:id="@+id/et_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/tv_age"
        android:paddingStart="8dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_change_photo" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="377dp" />

    <TextView
        android:id="@+id/tv_user_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tv_hint_choose_country"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_choose_birthday"
        android:layout_marginTop="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="307dp" />

    <TextView
        android:id="@+id/tv_choose_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_text_gender"
        app:layout_constraintBottom_toTopOf="@id/rg_choose_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_country" />

    <RadioGroup
        android:id="@+id/rg_choose_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_gender">

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rb_text_female"/>

        <RadioButton
            android:id="@+id/rb_male"
            android:text="@string/rb_text_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <RadioButton
            android:id="@+id/rb_not_specified"
            android:text="@string/rb_text_not_specified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />
    </RadioGroup>

        <EditText
            android:id="@+id/et_postal_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rg_choose_gender"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/et_hint_postal_address"/>

</androidx.constraintlayout.widget.ConstraintLayout>