<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#000000"
    >

    <ImageView
        android:id="@+id/greenFlagLogo"
        android:layout_width="315dp"
        android:layout_height="76dp"
        android:layout_marginTop="72dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_green_flag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_green_flag" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="347dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/gradient_button_background"
        android:text="@string/create_an_account"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="createAccount"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/greenFlagText"
        android:layout_width="309dp"
        android:layout_height="66dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="15dp"
        android:text="@string/tv_greenflag_access"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/reasonOne"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greenFlagLogo" />

    <ImageView
        android:id="@+id/tickOne"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tickThree"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/tickTwo"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greenFlagText"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/tickThree"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tickTwo"
        app:srcCompat="@drawable/tick" />

    <TextView
        android:id="@+id/reasonOne"
        android:layout_width="161dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_reason1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tickTwo"
        app:layout_constraintTop_toBottomOf="@+id/greenFlagText" />

    <TextView
        android:id="@+id/reasonTwo"
        android:layout_width="197dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"

        android:layout_marginTop="24dp"
        android:text="@string/tv_reason2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tickOne"
        app:layout_constraintTop_toBottomOf="@+id/reasonThree" />

    <TextView
        android:id="@+id/reasonThree"
        android:layout_width="211dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_reason3"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tickThree"
        app:layout_constraintTop_toBottomOf="@+id/reasonOne" />

</androidx.constraintlayout.widget.ConstraintLayout>